--- a/front/vecindapp/src/app/login/login.component.css
+++ b/front/vecindapp/src/app/login/login.component.css
@@ -10,6 +10,16 @@
     align-items: center;
     transform: translate(-50%, -50%);
 }
+.form-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.header-low{
+    justify-items: center;
+    margin-bottom: 10px;
+}
+
 .body-container{
     width: 100%;
     height: 100%;
