Sidebar funcional, creacion de otros componentes

--- a/front/vecindapp/src/app/app.component.html
+++ b/front/vecindapp/src/app/app.component.html
@@ -1,2 +1,6 @@
-
-  <router-outlet/>
+@if(!loggedIn){
+  <app-login (loggedInEvent)="confirmLogIn()"></app-login>
+} @else {
+  <app-sidebar></app-sidebar>
+  
+}
