Mejora del sistema login, falta manejar la ruta vacia cuando esta loggeado

--- a/front/vecindapp/src/app/app.component.html
+++ b/front/vecindapp/src/app/app.component.html
@@ -1,6 +1,5 @@
 @if(!loggedIn){
-  <app-login (loggedInEvent)="confirmLogIn()"></app-login>
+  <app-login  (loginEvent)="confirmLogIn($event)"></app-login>
 } @else {
-  <app-sidebar></app-sidebar>
-  
+  <app-sidebar [loggedUserString]="loggedUser"></app-sidebar>
 }
