--- a/front/vecindapp/src/app/viviendas/viviendas.component.css
+++ b/front/vecindapp/src/app/viviendas/viviendas.component.css
@@ -7,7 +7,7 @@
 
 .list-container{
     width: 100%;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 299px);
 }
 
 .form-container{
@@ -19,4 +19,38 @@
 
 mat-form-field{
     width: 100%;
+}
+.spinner-container{
+z-index: 10;
+position:absolute;
+width: 100%;
+height: 100%;
+background-color: rgba(95, 52, 19, 0.641);
+justify-content: center;
+justify-items: center;
+align-content: center;
+
+}
+.card{
+    height: calc(100vh - 170px);
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.content{
+    flex:6;
+    border: 1px solid red;
+    align-items: center;
+    justify-items: center;
+}
+.footer{
+    flex:.3;
+    border: 1px solid green;
+}
+
+.small-button{
+    margin-right: 5px;
+    box-shadow: none;
 }
