--- a/front/vecindapp/src/app/viviendas/viviendas.component.html
+++ b/front/vecindapp/src/app/viviendas/viviendas.component.html
@@ -22,7 +22,7 @@
             <ng-container matColumnDef="Acciones">
                 <th mat-header-cell *matHeaderCellDef>Acciones</th>
                 <td mat-cell *matCellDef="let vivienda">
-                    <button mat-mini-fab class="small-button">
+                    <button mat-mini-fab class="small-button" (click)="openDialog(vivienda)">
                         <mat-icon>edit</mat-icon>
                     </button>
                     <button mat-mini-fab class="small-button">
