--- a/front/vecindapp/src/app/sidebar/sidebar.component.css
+++ b/front/vecindapp/src/app/sidebar/sidebar.component.css
@@ -27,4 +27,20 @@ mat-toolbar {
 mat-sidenav{
     border-radius: 0px;
     box-shadow: 2px 0px 2px grey;
+     display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+
+
+.logout-container {
+    display: flex;
+    margin-left: 10px;
+    margin-top: 160px;
+}
+
+.logout-button{
+    justify-content: start;
+    width: 70%;
 }
